# text-classifier-decide

./: README.md  data.py  ld.py  main.py  pyproject.toml  test.py  text-classification-trainer.ipynb  train.py
