[project]
name = "lblod-text-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fire>=0.7.1",
    "gitpython>=3.1.45",
    "rdflib>=7.1.4",
    "scikit-learn>=1.7.1",
    "transformers>=4.56.0",
]
