[project]
name = "lblod-text-classifier"
version = "0.1.0"
description = "LBLOD Text Classification Modeling (huggingface based) single/multilabel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fire>=0.7.1",
    "gitpython>=3.1.45",
    "rdflib>=7.1.4",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers[torch]>=4.56.0",
]
